--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -10,7 +10,7 @@
 <p>YouTube Subscribe Button</p>
 <button onclick="subscribe();" class="js-subscribe-button">Subscribe</button>
 
-<p>Amazon Shipping Calculator</p>
+<p>Amazon Shipping Calculator new version</p>
 <input placeholder="Cost of order" class="js-cost-input" onkeydown="handleCostKeydown(event) ">
 <button onclick="calculateTotal();">Calculate</button>
 
